--- a/grandfilms/backend/package.json
+++ b/grandfilms/backend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart" :"nodemon app.js",
+    "devStart": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "googleapis": "^39.2.0",
     "mongoose": "^5.10.15"
   },
   "devDependencies": {
